--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="css/main.css">
   <title>Your Diary</title>
 </head>
 <body>
@@ -12,7 +13,24 @@
     <input required maxlength="10" placeholder="Please Enter your name!" type="text">
   </form>
   <h1 class="hidden" id="title-name"></h1>
-
-  <script src="js/main.js"></script>
+  <h2 id="clock">00:00:00</h2>
+  <span class="material-icons">home</span>
+  <span class="material-icons">fact_check</span>
+  <span class="material-icons">edit_calendar</span>
+    
+  <div id="quotes">
+    <span></span>
+    <span></span>
+  </div>
+  <div id="weather">
+    <span></span>
+    <span></span>
+  </div>
+  <img src="img/3.jpg" alt="image">
+  <script src="js/greeting.js"></script>
+  <script src="js/clock.js"></script>
+  <script src="js/quotes.js"></script>
+  <script src="js/weather.js"></script>
+  <!-- <script src="js/background.js"></script> -->
 </body>
 </html>
