--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/main.css">
   <title>Your Diary</title>
@@ -13,20 +17,22 @@
     <input required maxlength="10" placeholder="Please Enter your name!" type="text">
   </form>
   <h1 class="hidden" id="title-name"></h1>
-  <h2 id="clock">00:00:00</h2>
-  <span class="material-icons">home</span>
-  <span class="material-icons">fact_check</span>
-  <span class="material-icons">edit_calendar</span>
-    
+
+  <!-- <span id="homeIcon" class="material-icons">home</span> -->
+  <div id="icon">
+    <span class="material-icons">edit_calendar</span>
+    <span class="material-icons">fact_check</span>
+  </div>
   <div id="quotes">
-    <span></span>
+    <span></span><br><br>
     <span></span>
   </div>
   <div id="weather">
     <span></span>
     <span></span>
+    <img src="" alt="날씨">
   </div>
-  <img src="img/3.jpg" alt="image">
+  <h2 id="clock">00:00:00</h2>
   <script src="js/greeting.js"></script>
   <script src="js/clock.js"></script>
   <script src="js/quotes.js"></script>
