--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
   <!-- <span id="homeIcon" class="material-icons">home</span> -->
   <div id="icon">
-    <span class="material-icons">edit_calendar</span>
-    <span class="material-icons">fact_check</span>
+    <a href="diary.html">
+      <span class="material-icons">edit_calendar</span>
+    </a>
+    <a href="todo.html">
+      <span class="material-icons">fact_check</span>
+    </a>
   </div>
   <div id="quotes">
     <span></span><br><br>
