Add animation in diary page and to-do page

--- a/todo.html
+++ b/todo.html
@@ -35,6 +35,17 @@
     <img src="" alt="날씨">
   </div>
   <h2 id="clock">00:00:00</h2>
+
+  <!-- 별 내리는 효과 -->
+  <div class="top">
+    <div class="shooting-stars">
+      <div class="shooting-star"></div>
+      <div class="shooting-star shooting-star--mid"></div>
+      <div class="shooting-star shooting-star--fast"></div>
+      <div class="shooting-star shooting-star--meh"></div>
+    </div>
+  </div>
+
   <script src="js/clock.js"></script>
   <script src="js/weather.js"></script>
   <script src="js/todo.js"></script>
