--- a/diary.html
+++ b/diary.html
@@ -5,21 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/diary.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">  
     <title>Diary</title>
 </head>
 <body>
-    
+  <h1>Diary</h1>
 
-
     
-    <div id="weather">
-        <span></span>
-        <span></span>
-        <img src="" alt="날씨">
-      </div>
-      <h2 id="clock">00:00:00</h2>
-    <script src="js/clock.js"></script>
-    <script src="js/weather.js"></script>
-    <script src="js/diary.js"></script>
+    <div id="backgroundImg"></div>
+  <script src="js/diary.js"></script>
 </body>
 </html>
