Apply dark Mode in todo page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
   <script src="js/clock.js"></script>
   <script src="js/quotes.js"></script>
   <script src="js/weather.js"></script>
-  <script src="js/mode.js"></script>
+  <script src="js/main_mode.js"></script>
 </body>
 </html>
